@@ -1,3 +1,7 @@
+2007-08-21  Marek Safar  <marek.safar@gmail.com>
+
+	* cs-parser.jay, linq.cs: Implemented orderby clause.
+	
 2007-08-20  Marek Safar  <marek.safar@gmail.com>
 
 	* linq.cs: Switch to lambda expressions.
